--- a/CatchTheKenny/Base.lproj/Main.storyboard
+++ b/CatchTheKenny/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +10,149 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="CatchTheKenny" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="kenny.png" translatesAutoresizingMaskIntoConstraints="NO" id="ZAv-4w-8yU">
+                                <rect key="frame" x="40" y="171" width="106" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="106" id="8LD-Ut-ePi"/>
+                                    <constraint firstAttribute="height" constant="128" id="mCl-1S-KLY"/>
+                                </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="kenny.png" translatesAutoresizingMaskIntoConstraints="NO" id="O65-Y3-eXO">
+                                <rect key="frame" x="154" y="171" width="106" height="128"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="kenny.png" translatesAutoresizingMaskIntoConstraints="NO" id="rVm-Eq-kv1">
+                                <rect key="frame" x="268" y="171" width="106" height="128"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="kenny.png" translatesAutoresizingMaskIntoConstraints="NO" id="Ae5-AJ-nDs">
+                                <rect key="frame" x="40" y="307" width="106" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="vOA-eh-Njk"/>
+                                </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="kenny.png" translatesAutoresizingMaskIntoConstraints="NO" id="p2h-Js-pZA">
+                                <rect key="frame" x="154" y="307" width="106" height="128"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="kenny.png" translatesAutoresizingMaskIntoConstraints="NO" id="xxa-xO-8nE">
+                                <rect key="frame" x="268" y="307" width="106" height="128"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="kenny.png" translatesAutoresizingMaskIntoConstraints="NO" id="gZJ-r9-tzn">
+                                <rect key="frame" x="40" y="443" width="106" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="vW9-mR-c9a"/>
+                                </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="kenny.png" translatesAutoresizingMaskIntoConstraints="NO" id="IvC-XG-LWU">
+                                <rect key="frame" x="154" y="443" width="106" height="128"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="kenny.png" translatesAutoresizingMaskIntoConstraints="NO" id="wvg-0o-z2q">
+                                <rect key="frame" x="268" y="443" width="106" height="128"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="30" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fYx-HV-Cqg">
+                                <rect key="frame" x="170" y="56" width="74" height="39"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="39" id="ZFM-7Q-Ndj"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="39"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Score:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zHw-v6-6qk">
+                                <rect key="frame" x="134" y="103" width="146" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UoM-nK-DFY">
+                                <rect key="frame" x="211" y="661" width="77" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hiscore:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mtR-gl-wrd">
+                                <rect key="frame" x="126" y="661" width="77" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="77" id="kTL-Zq-w3Y"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="UoM-nK-DFY" firstAttribute="leading" secondItem="mtR-gl-wrd" secondAttribute="trailing" constant="8" id="0Gt-XW-Kgw"/>
+                            <constraint firstItem="ZAv-4w-8yU" firstAttribute="top" secondItem="zHw-v6-6qk" secondAttribute="bottom" constant="47" id="2rn-E0-GAD"/>
+                            <constraint firstItem="mtR-gl-wrd" firstAttribute="baseline" secondItem="UoM-nK-DFY" secondAttribute="baseline" id="4Vs-Bv-sIB"/>
+                            <constraint firstItem="ZAv-4w-8yU" firstAttribute="bottom" secondItem="O65-Y3-eXO" secondAttribute="bottom" id="896-Fm-F7m"/>
+                            <constraint firstItem="Ae5-AJ-nDs" firstAttribute="top" secondItem="p2h-Js-pZA" secondAttribute="top" id="8rl-N8-VbD"/>
+                            <constraint firstItem="fYx-HV-Cqg" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="170" id="9A9-xa-TUY"/>
+                            <constraint firstItem="p2h-Js-pZA" firstAttribute="leading" secondItem="IvC-XG-LWU" secondAttribute="leading" id="Bua-bf-rBa"/>
+                            <constraint firstItem="zHw-v6-6qk" firstAttribute="centerX" secondItem="O65-Y3-eXO" secondAttribute="centerX" id="EGR-4M-k5m"/>
+                            <constraint firstItem="gZJ-r9-tzn" firstAttribute="top" secondItem="IvC-XG-LWU" secondAttribute="top" id="Iz0-1c-LEH"/>
+                            <constraint firstItem="Ae5-AJ-nDs" firstAttribute="bottom" secondItem="p2h-Js-pZA" secondAttribute="bottom" id="Jrj-JB-EtC"/>
+                            <constraint firstItem="O65-Y3-eXO" firstAttribute="bottom" secondItem="rVm-Eq-kv1" secondAttribute="bottom" id="MB2-1o-BtM"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="UoM-nK-DFY" secondAttribute="trailing" constant="126" id="NSE-uB-rhv"/>
+                            <constraint firstItem="p2h-Js-pZA" firstAttribute="trailing" secondItem="IvC-XG-LWU" secondAttribute="trailing" id="OWc-sY-gcK"/>
+                            <constraint firstItem="fYx-HV-Cqg" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="12" id="PfV-Y6-qet"/>
+                            <constraint firstItem="rVm-Eq-kv1" firstAttribute="leading" secondItem="O65-Y3-eXO" secondAttribute="trailing" constant="8" id="Pft-uQ-pjx"/>
+                            <constraint firstItem="rVm-Eq-kv1" firstAttribute="trailing" secondItem="xxa-xO-8nE" secondAttribute="trailing" id="Rzz-7q-czh"/>
+                            <constraint firstItem="ZAv-4w-8yU" firstAttribute="leading" secondItem="Ae5-AJ-nDs" secondAttribute="leading" id="SHV-dF-U9F"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="rVm-Eq-kv1" secondAttribute="trailing" constant="40" id="SYe-1x-1dw"/>
+                            <constraint firstItem="Ae5-AJ-nDs" firstAttribute="top" secondItem="ZAv-4w-8yU" secondAttribute="bottom" constant="8" id="Sye-KH-H9q"/>
+                            <constraint firstItem="O65-Y3-eXO" firstAttribute="leading" secondItem="ZAv-4w-8yU" secondAttribute="trailing" constant="8" id="Vx4-Ik-bEN"/>
+                            <constraint firstItem="gZJ-r9-tzn" firstAttribute="top" secondItem="Ae5-AJ-nDs" secondAttribute="bottom" constant="8" id="WHR-6d-wCc"/>
+                            <constraint firstItem="zHw-v6-6qk" firstAttribute="top" secondItem="fYx-HV-Cqg" secondAttribute="bottom" constant="8" id="Xy3-UF-jCc"/>
+                            <constraint firstItem="ZAv-4w-8yU" firstAttribute="top" secondItem="O65-Y3-eXO" secondAttribute="top" id="ZJp-3g-oRs"/>
+                            <constraint firstItem="IvC-XG-LWU" firstAttribute="top" secondItem="wvg-0o-z2q" secondAttribute="top" id="aQu-2f-pQ3"/>
+                            <constraint firstItem="p2h-Js-pZA" firstAttribute="top" secondItem="xxa-xO-8nE" secondAttribute="top" id="acK-1f-CI3"/>
+                            <constraint firstItem="ZAv-4w-8yU" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="bQk-XQ-AWr"/>
+                            <constraint firstItem="xxa-xO-8nE" firstAttribute="trailing" secondItem="wvg-0o-z2q" secondAttribute="trailing" id="d3w-nf-NWr"/>
+                            <constraint firstItem="fYx-HV-Cqg" firstAttribute="centerX" secondItem="zHw-v6-6qk" secondAttribute="centerX" id="dZv-GW-rI9"/>
+                            <constraint firstItem="O65-Y3-eXO" firstAttribute="leading" secondItem="p2h-Js-pZA" secondAttribute="leading" id="dkf-UK-EQ3"/>
+                            <constraint firstItem="zHw-v6-6qk" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="134" id="hwx-ff-b1y"/>
+                            <constraint firstItem="rVm-Eq-kv1" firstAttribute="leading" secondItem="xxa-xO-8nE" secondAttribute="leading" id="iqY-Vy-Qwv"/>
+                            <constraint firstItem="mtR-gl-wrd" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="126" id="jDD-kP-qrP"/>
+                            <constraint firstItem="fYx-HV-Cqg" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="kwr-yK-ep6"/>
+                            <constraint firstItem="O65-Y3-eXO" firstAttribute="trailing" secondItem="p2h-Js-pZA" secondAttribute="trailing" id="lUa-j0-s8y"/>
+                            <constraint firstItem="O65-Y3-eXO" firstAttribute="top" secondItem="rVm-Eq-kv1" secondAttribute="top" id="nxF-6f-v7a"/>
+                            <constraint firstItem="Ae5-AJ-nDs" firstAttribute="trailing" secondItem="gZJ-r9-tzn" secondAttribute="trailing" id="nyA-eE-gpe"/>
+                            <constraint firstItem="IvC-XG-LWU" firstAttribute="bottom" secondItem="wvg-0o-z2q" secondAttribute="bottom" id="pQ1-or-rhO"/>
+                            <constraint firstItem="gZJ-r9-tzn" firstAttribute="bottom" secondItem="IvC-XG-LWU" secondAttribute="bottom" id="rPk-BI-Y9R"/>
+                            <constraint firstItem="ZAv-4w-8yU" firstAttribute="trailing" secondItem="Ae5-AJ-nDs" secondAttribute="trailing" id="sdo-FW-xYg"/>
+                            <constraint firstItem="mtR-gl-wrd" firstAttribute="baseline" secondItem="UoM-nK-DFY" secondAttribute="firstBaseline" id="tA5-Fu-hPt"/>
+                            <constraint firstItem="Ae5-AJ-nDs" firstAttribute="leading" secondItem="gZJ-r9-tzn" secondAttribute="leading" id="y8H-9u-p3o"/>
+                            <constraint firstItem="p2h-Js-pZA" firstAttribute="bottom" secondItem="xxa-xO-8nE" secondAttribute="bottom" id="yzx-NG-m6G"/>
+                            <constraint firstItem="xxa-xO-8nE" firstAttribute="leading" secondItem="wvg-0o-z2q" secondAttribute="leading" id="zXw-OE-uNr"/>
+                            <constraint firstItem="mtR-gl-wrd" firstAttribute="top" secondItem="gZJ-r9-tzn" secondAttribute="bottom" constant="90" id="zqR-Q3-Kre"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="hiscoreLabel" destination="UoM-nK-DFY" id="d5D-Tt-VlE"/>
+                        <outlet property="kenny1" destination="ZAv-4w-8yU" id="wN3-no-Pm9"/>
+                        <outlet property="kenny2" destination="O65-Y3-eXO" id="9nO-Xv-WOT"/>
+                        <outlet property="kenny3" destination="rVm-Eq-kv1" id="oCL-KL-9kH"/>
+                        <outlet property="kenny4" destination="Ae5-AJ-nDs" id="S9D-sd-ldw"/>
+                        <outlet property="kenny5" destination="p2h-Js-pZA" id="jou-S6-59X"/>
+                        <outlet property="kenny6" destination="xxa-xO-8nE" id="TtN-P3-hh3"/>
+                        <outlet property="kenny7" destination="gZJ-r9-tzn" id="Mdy-ix-2Xw"/>
+                        <outlet property="kenny8" destination="IvC-XG-LWU" id="vWt-9H-UP1"/>
+                        <outlet property="kenny9" destination="wvg-0o-z2q" id="152-Rg-ihr"/>
+                        <outlet property="scoreLabel" destination="zHw-v6-6qk" id="SNf-q8-iPr"/>
+                        <outlet property="timeLabel" destination="fYx-HV-Cqg" id="aZc-lP-thl"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="131.8840579710145" y="138.61607142857142"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="kenny.png" width="665" height="768"/>
+    </resources>
 </document>
